--- a/_config.yml
+++ b/_config.yml
@@ -20,13 +20,16 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://megus.org" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: sugem
-github_username:  Megus
+
+google_analytics: true
 
 # Build settings
 markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
+
+incremental: true
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
