--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,10 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://megus.org" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: sugem
 
-google_analytics: true
+header_pages:
+  - resume.md
+
+google_analytics: UA-104711057-2
 
 # Build settings
 markdown: kramdown
