--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,8 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://megus.org" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: sugem
-disqus_shortname: megus
+disqus:
+  - shortname: megus
 
 header_pages:
   - about.md
