--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://megus.org" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: sugem
 disqus:
-  - shortname: megus
+  shortname: megus
 
 header_pages:
   - about.md
