--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: megus.org
 email: megus.sugem@gmail.com
+author: Megus
 description: >- # this means to ignore newlines until "baseurl:"
   The place where Megus dwells.
 baseurl: "" # the subpath of your site, e.g. /blog
