--- a/_config.yml
+++ b/_config.yml
@@ -13,11 +13,11 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: megus.org
+title: Megus
 email: megus.sugem@gmail.com
 author: Megus
 description: >- # this means to ignore newlines until "baseurl:"
-  The place where Megus dwells.
+  Personal website of Roman "Megus" Petrov
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://megus.org" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: sugem
@@ -26,7 +26,7 @@ disqus:
 
 header_pages:
   - about.md
-  - resume.md
+  - music.md
 
 show_excerpts: true
 excerpt_separator: <!--more-->
