Favicon added, started to work on portfolio

--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,11 @@ header_pages:
   - about.md
   - music.md
 
+collections:
+  projects:
+    output: true
+
+
 show_excerpts: true
 excerpt_separator: <!--more-->
 
