--- a/_config.yml
+++ b/_config.yml
@@ -1,28 +1,11 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
 title: Megus
 email: megus.sugem@gmail.com
 author: Megus
-description: >- # this means to ignore newlines until "baseurl:"
-  Personal website of Roman "Megus" Petrov
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://megus.org" # the base hostname & protocol for your site, e.g. http://example.com
+description: >
+  Personal website of Roman "Megus" Petrov, a programmer and a musician.
+baseurl: ""
+url: "https://megus.org"
 twitter_username: sugem
-disqus:
-  shortname: megus
 
 exclude:
   - build.sh
@@ -38,7 +21,6 @@ collections:
   projects:
     output: true
 
-
 show_excerpts: true
 excerpt_separator: <!--more-->
 
@@ -49,17 +31,3 @@ markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
-
-incremental: true
-
-# Exclude from processing.
-# The following items will not be processed, by default. Create a custom list
-# to override the default setting.
-# exclude:
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
