Fix in config, removed old Resume page

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 title: Megus
 email: megus.sugem@gmail.com
 author: Megus
-description: "Personal website of Roman "Megus" Petrov, a programmer and a musician."
+description: >
+  Personal website of Roman "Megus" Petrov, a programmer and a musician.
 baseurl: ""
 url: "https://megus.org"
 
